--- a/index.html
+++ b/index.html
@@ -18,43 +18,44 @@
 
   <body>
 
-    <div class="site-wrapper">
+    <div class="site-wrapper" style="background-color:#333333; color:white;">
 
-      <div class="site-wrapper-inner">
+		<div class="site-wrapper-inner">
 
-        <div class="cover-container">
+			<div class="cover-container">
 
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
-              <nav class="nav nav-masthead">
-                <a class="nav-link active" href="#">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="#">Contact</a>
-              </nav>
-            </div>
-          </div>
+				<div class="masthead clearfix">
+					<div class="inner">
+						<h3 class="masthead-brand">Portfolio</h3>
+						<nav class="nav nav-masthead">
+							<a class="nav-link active" href="#">Contact</a>
+						</nav>
+					</div>
+				</div>
 
-          <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-            </p>
-          </div>
+				<div class="inner cover">
+					<h1 class="cover-heading">Web and Software Developer</h1>
+					<p class="lead">Portfolio page with some of my most recent works. Feel free to leave your support above.</p>
+				</div>
 
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Cover template for <a href="https://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
+			</div>
+		
+		</div>
 
     </div>
+	
+	<div style="background-color:white; color:black;">
 
+		<div class="col-md-12">
+
+			<div class="container">
+				<h1 class="cover-heading">Web and Software Developer</h1>
+				<p class="lead">Portfolio page with some of my most recent works. Feel free to leave your support above.</p>
+			</div>
+		
+		</div>
+
+    </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
